Update README.md, add frontend information